Fix action selector to enforce physical execution for abstract actions with equivalents. Ensure preferences and equivalences are correctly propagated from shared KB to agent memory.